--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,13 +1,15 @@
 <div data-aos="fade-up" data-aos-duration="1000">
-	<div class="row" align="center" data-aos="fade-up" data-aos-duration="1500">
+	<div class="row" align="center" style="margin-bottom: 5%">
 		<div class="col-md-12">
-			<h1 style="color: #D4AF37">Edit Product</h1>
+			<div>
+				<img style="width: 35%; height: 35%;" src="https://s3.amazonaws.com/tbwigsassets/assets/BLACKWOMANISGOD+GOLD.png">
+			</div>
+			
+			<h1 style="color: #D4AF37; margin-bottom: 5%">Lets Edit Your Product!</h1>
 		</div>
 	</div>
 
-
-
-	  <%= render 'form_edit', product: @product %>
+	<%= render 'form_edit', product: @product %>
 
 
 </div>
