--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,7 +1,11 @@
 <div data-aos="fade-up" data-aos-duration="1000">
-	<div class="row" align="center">
+	<div class="row" align="center" style="margin-bottom: 5%">
 		<div class="col-md-12">
-			<h1 style="color: #D4AF37">Sell Your Product</h1>
+			<div>
+				<img style="width: 35%; height: 35%;" src="https://s3.amazonaws.com/tbwigsassets/assets/BLACKWOMANISGOD+GOLD.png">
+			</div>
+			
+			<h1 style="color: #D4AF37; margin-bottom: 5%">Lets Create Your Product!</h1>
 		</div>
 	</div>
 
