--- a/app/views/subscribers/new.html.erb
+++ b/app/views/subscribers/new.html.erb
@@ -4,8 +4,8 @@
             <div class="panel-body">
                 <h2 style="margin-top: 1%"><strong>Please Subscribe</strong> To post your business</h2>
                 <h3 style="margin-top: 1%">This is the final step to give you full access to posting your business </h3> 
+                <h3>The monthly subscription fee for promotion of your business on the site is $19.99.</h3>
                 <h5 style="margin-top: 1%">
-                	The monthly subscription fee for promotion of your business on the site is $19.99.
                     Subscription fee's Can be changed at anytime based on our discretion.
 
                     <strong>All Businesses who subscribe are presumed to be in good legal standing.</strong>
@@ -15,8 +15,7 @@
             
           <!--Enter your form contents here-->
 
-          <b style="margin-top: 1%">By signing up, You accept all terms and conditions. </b><br />
-          I accept all terms and conditions: <input type="checkbox" value="0" name="agree" onclick="myFunction()">
+          <h4 style="margin-top: 1%">By signing up, You accept all terms and conditions. </h4><br/>
 
           </form>
 
