--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,8 +17,8 @@
 
 
 #map{
-  width: 60%;
-  height: 60%;
+  width: 80%;
+  height: 80%;
 }
 
 #flash_notice{
@@ -41,10 +41,10 @@
 
 #profile_pic{
   border-radius: 5px;
-  border-style: solid;
-  border-color: black;
-  width: 80%;
-  height: 80%;
+  // border-style: solid;
+  // border-color: black;
+  width: 250px;
+  height: auto;
 }
 
 #conversation-body {
@@ -99,12 +99,13 @@ body {
   border-style: solid;
   border-color: #D4AF37;
   border-width: 3px;
-  width: 340px;
+  padding: 1%;
+  margin-bottom: 10%;
 
 }
 
 a:hover { 
-  background-color: rgba(212,175,55, 0.3);;
+  background-color: rgba(212,175,55, 0);;
 
 }
 
@@ -131,9 +132,10 @@ a:hover {
   border-color: rgba(212,175,55, 0.3);
   border-width: 0.1px;
   border-style: solid;
-  
-  padding-top: 6%;
   border-radius: 10px;
+  margin-top: 3%;
+  width: 100%;
+  height: 60% !important;
 
 }
 .thumbnail:hover{
@@ -151,19 +153,8 @@ a:hover {
   
 }
 
-// #thumbz{
-//   height: 50%;
-//   width: 50% !important;
-//   border-radius: 5px;
-  
-// }
-
 #prod_row{
-  // background-image: url("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/bacground1440.png");
- 
   margin-top: 5%;
-
-
 }
 
 #pic_row{
