--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,41 +1,37 @@
     <!-- Footer -->
-    <footer class="footer" style=" height: auto; width: auto; padding: 1%; padding-bottom: -10%; color: black; margin-top: 25%; border-radius: 10px; border-width: 10px; border-color: #D4AF37; border-style: solid;  opacity: 0.8">
+    <footer class="footer" align="center" style=" height: auto; width: auto; color: black; margin-top: 25%; border-radius: 10px; border-width: 10px; border-color: #D4AF37; border-style: solid;  opacity: 0.8; padding-top: 2%; padding-bottom: 2%;">
 
-    	<div class="row">
-            <div class="col-xs-12">
-                <div class="col-md-5 left" >
-                    <div align="center">
-                      <img src="https://s3.amazonaws.com/tbwigsassets/assets/BLACKWOMANISGOD+GOLD.png" style="height: auto; width: 300px;" align="center"> 
-                    </div>
+            <div class="row" align="center">
+                 
+                <ul  style="list-style-type: none; padding-inline-start: 0px !important;">
+                    <li><%= link_to "Home", root_path, style: "color: #D4AF37; margin: 5px;" %></li>
+                    <li><%= link_to "Store", products_path, style: "color: #D4AF37; margin: 5px;" %></li>
+                    <li><%= link_to "Business Services", businesses_path, style: "color: #D4AF37; margin: 5px;" %></li>
+                    <li><%= link_to "About Us", pages_about_path, style: "color: #D4AF37; margin: 5px;" %></li>
+                    <li><%= link_to "Contact Us", pages_contact_path, style: "color: #D4AF37; margin: 5px;" %></li>
+                    
+                </ul>
 
-                </div> 
+                <ul class="social-icons" style="padding-inline-start: 0px !important">
 
-                <div class="col-md-5 right">
- 
-                    <ul align="center" style="list-style-type: none; margin-top:80px; width: 200px; margin-left: 8.5%;">
-                        <li><%= link_to "Home", root_path, style: "color: #D4AF37; margin: 5px;" %></li>
-                        <li><%= link_to "Store", products_path, style: "color: #D4AF37; margin: 5px;" %></li>
-                        <li><%= link_to "Business Services", businesses_path, style: "color: #D4AF37; margin: 5px;" %></li>
-                        <li><%= link_to "About Us", pages_about_path, style: "color: #D4AF37; margin: 5px;" %></li>
-                        <li><%= link_to "Contact Us", pages_contact_path, style: "color: #D4AF37; margin: 5px;" %></li>
-                        <li><a href="https://www.instagram.com/tbwig_stores/?hl=en" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
-                        
-                    </ul>
+                    <li><a href="https://www.facebook.com/PharaohAten" target="_blank" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
 
-                </div>
+                    <li><a href="https://twitter.com/tbwig_stores/status/1259339941995298817?s=21" target="_blank" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+
+                    <li><a href="https://www.youtube.com/channel/UCtKtmiQ2GlWlqPDzXwrR4NA" target="_blank" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
+
+                    <li><a href="https://www.instagram.com/tbwig_stores/?hl=en" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+                </ul>
 
 
             </div>
+                
 
+            
+   
 
-
-    	</div>
-
-	
-
-    	<div class="row" align="center">
-				<h5>The Black Woman Is God Stores © 2018</h5>
-    	</div>
-
+        <div class="row" align="center" style="color: #D4AF37;">
+                <h5>The Black Woman Is God Stores © 2018</h5>
+        </div>
 
     </footer>
