--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -77,7 +77,7 @@
 						<div class="col-md-6" align="center">
 							<div>
 								<%= link_to business do %>
-				       				<%= image_tag(business.artwork, :style => "width: 65%; height: 65%; margin-top: 20%;") %>
+				       				<%= image_tag(business.artwork, :style => "width: 75px; height: 75px; margin-top: 20%;") %>
 				    			<% end %>
 							</div>
 							
@@ -92,7 +92,7 @@
 						</div>
 					</div>
 					<div class="row" style="margin-top: 1%; margin-bottom: 1%; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; word-wrap: break-word;">
-						<h3><%= link_to business.title, business_path(business), style: "color: #D4AF37;" %></h3>
+						<h3 style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis; word-wrap: break-word;"><%= link_to business.title, business_path(business), style: "color: #D4AF37;" %></h3>
 					</div>
 					<div class="row" style="margin: 3%;">
 						<h4 style="color: #D4AF37">Description:</h4>
