--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -67,12 +67,12 @@
 
 
 
-
+<div class="row">
 <% @businesses.each do |business| %>
 	<% unless business.user.subscribed == false %>
 		
 			<div class="col-md-4" align="center">
-				<div data-aos="zoom-in" data-aos-duration="2000" style=" width: 100%; height: auto; border: solid; border-width: 1px; border-radius: 10px; border-color: #D4AF37; margin-top: 3%">
+				<div data-aos="zoom-in" data-aos-duration="2000" style=" width: 100%; height: 550px; border: solid; border-width: 1px; border-radius: 10px; border-color: #D4AF37; margin-top: 3%; padding: 2%">
 					<div class="row">
 						<div class="col-md-6" align="center">
 							<div>
@@ -83,7 +83,7 @@
 							
 						</div>
 						<div class="col-md-6">
-							<div style="margin: 2%">
+							<div>
 								<h4><strong style="color: #D4AF37">State:</strong> <br><%= business.state.name %></h4>
 								<h4><strong style="color: #D4AF37">City:</strong> <br><%= business.city %></h4>
 								<h4><strong style="color: #D4AF37">Business Category:</strong> <br><%= business.business_category.name %></h4>
@@ -114,17 +114,18 @@
 					
 				</div>
 			</div>
-	
-
-
-
-
-
-
-
-<%= paginate @businesses %>
+		<%= paginate @businesses %>
 	<% end %>
-<% end %> 	
+<% end %> 				
+</div>
+
+
+
+
+
+
+
+
 		
 
 
